# vinaudit

./: .env  .gitignore  Design Document.docx  main.py  pyproject.toml  requirements.txt  ~$sign Document.docx
app/: linear_regression_model.pkl  regression_model.json  regression_model.pkl
app/api/: api.py
app/api/endpoints/: estimate_settings.py
app/controllers/: __init__.py  base.py  estimate_controller.py
app/core/: config.py  server.py
app/core/database/: create_db.py  session.py
app/core/exceptions/: __init__.py  base.py
app/core/factory/: factory.py
app/integration/: lr_model.py
app/models/: __init__.py  estimate.py  mixins.py
app/repositories/: __init__.py  base.py  estimate_base.py
app/schemas/requests/: estimate.py
app/schemas/responses/: estimate.py
app/templates/: estimate_form_with_result.html
app/utils/: logger.py
migrations/: env.py
migrations/versions/: c0769f2fc3eb_new_table.py  dc00357dbd26_newtab_e.py
