[tool.poetry]
name = "vinaudit"
version = "0.1.0"
description = ""
authors = ["Sarim-Sikander <sarimsikander24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
mysql = "^0.0.3"
pydantic = "^2.9.2"
mysql-connector-python = "^9.0.0"
sqlalchemy-utils = "^0.41.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
alembic = "^1.13.3"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
